--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
   	
 <div class="" style="margin-left:5%;margin-right:5%">
 	
-	<button class="btn2" margin="auto"><a href="index.html" style="color: rgb(15, 189, 23)" ><i class="fa fa-home"><</i></a></button>	
+	<button class="btn2" margin="auto"><a href="index.html" style="color: rgb(15, 189, 23)" ><i class="fa fa-home"></i></a></button>	
 
 <div class="text-center">
 		<img class="" height="160px" width="159px" src="images/logo.png" />
