--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
 
 
 						<h2 class="hide-on-mobile" style= "color: #ffffff; text-shadow: 2px 2px rgb(17, 18, 17);" >নিরাপদ রক্তের বন্ধন (নিরব)</h2>
-					
+					<h2 class="show-on-mobile" style= " margin-top: 30%; color: #ffffff; text-shadow: 2px 2px rgb(17, 18, 17);" >নিরাপদ রক্তের বন্ধন (নিরব)</h2>
 						<h4  class="hide-on-mobile" style= "color: #ffffff; ; text-shadow: 2px 2px rgb(60, 63, 60)" > রাজশাহী প্রকৌশল ও প্রযুক্তি বিশ্ববিদ্যালয়ের একটি স্বেচ্ছাসেবী সংগঠন</h4>
-						<h2 class="show-on-mobile" style="color:#ffffff; text-shadow:2px 2px rgb(17,18,17);">
-  নিরাপদ রক্তের বন্ধন (নিরব)
-</h2>
+					<br>
+					
+					<h4  class="show-on-mobile" style= " margin-top:50%; color: #ffffff;  text-shadow: 2px 2px rgb(60, 63, 60)" > রাজশাহী প্রকৌশল ও প্রযুক্তি বিশ্ববিদ্যালয়ের একটি স্বেচ্ছাসেবী সংগঠন</h4>
 
-<img class="show-on-mobile" height="160" width="159" src="images/logo2.png" style="margin-top:140px;" />
+<br>
+<img class="show-on-mobile" height="160" width="159" src="images/logo2.png" style="margin-top:70%;" />
 
 <style>
 						@media (max-width: 768px) {
