--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 <br>
 
 
-<img class="show-on-mobile" height="160" width="159" src="images/logo2.png" style="margin-top:5%;" /><br>
+<img class="show-on-mobile" height="160" width="159" src="images/logo2.png"  /><br>
 
 						<h2 class="hide-on-mobile" style= "color: #ffffff; text-shadow: 2px 2px rgb(17, 18, 17);" >নিরাপদ রক্তের বন্ধন (নিরব)</h2>
 					<h2 class="show-on-mobile" style= " margin-top: 40%; color: red; text-shadow: 1px 1px rgb(17, 18, 17);" >নিরাপদ রক্তের বন্ধন (নিরব)</h2>
 						<h4  class="hide-on-mobile" style= "color: #ffffff; ; text-shadow: 1px 1px rgb(60, 63, 60)" > রাজশাহী প্রকৌশল ও প্রযুক্তি বিশ্ববিদ্যালয়ের একটি স্বেচ্ছাসেবী সংগঠন</h4>
 					<br>
 					
-					<h4  class="show-on-mobile" style= " margin-top:60%; color: black;  text-shadow: 1px 1px white" > রাজশাহী প্রকৌশল ও প্রযুক্তি বিশ্ববিদ্যালয়ের একটি স্বেচ্ছাসেবী সংগঠন</h4>
+					<h4  class="show-on-mobile" style= " margin-top:60%; color: white;  text-shadow: 1px 1px white" > রাজশাহী প্রকৌশল ও প্রযুক্তি বিশ্ববিদ্যালয়ের একটি স্বেচ্ছাসেবী সংগঠন</h4>
 
 
 <style>
